# mrs-server

./: .gitignore  ABOUT.md  Agents-in-Space.md  INSTALL.md  MRS-SERVER-IMPL.md  MRS-SPEC-DRAFT.md  QUICKSTART.md  README.md  SKILL.md  USER_AUTH.md  USING_MRS_WITH_AGENTS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: AGENT_SKILL.md  EXPORT_FORMAT.md  FEDERATION_CONSISTENCY_RFC.md  FEDERATION_IMPLEMENTATION_PLAN.md  STATIC_LEVEL0.md  TLS_DEPLOYMENT.md
mrs_server/: __init__.py  config.py  database.py  main.py  models.py  validation.py
mrs_server/api/: __init__.py  admin.py  auth.py  register.py  release.py  search.py  sync.py  wellknown.py
mrs_server/auth/: __init__.py  bearer.py  dependencies.py  keys.py
mrs_server/federation/: __init__.py  peers.py  referrals.py
mrs_server/geo/: __init__.py  bbox.py  constants.py  distance.py  intersect.py
scripts/: bootstrap.sh  export-static-snapshot.py  init_db.py  verify-tls.sh  verify.sh
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_geo.py  test_whitelist.py
