[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrs-server"
version = "0.5.0"
description = "Mixed Reality Service (MRS) - A federated spatial registry protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mark Pesce", email = "admin@owen.iz.net"}
]
keywords = ["spatial", "registry", "federation", "geolocation", "mixed-reality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mpesce/mrs-server"
Documentation = "https://github.com/mpesce/mrs-server#readme"
Repository = "https://github.com/mpesce/mrs-server.git"
Issues = "https://github.com/mpesce/mrs-server/issues"

[project.scripts]
mrs-server = "mrs_server.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrs_server*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
